--- a/time_tracker/templates/clockin.html
+++ b/time_tracker/templates/clockin.html
@@ -1,30 +1,34 @@
-<table class="table">
-<thead>
-    <th>Clockin Date</th>
-    <th>Clockin Time</th>
-    <th>Clockout Date</th>
-    <th>Clockout Time</th>
-    <th>Total</th>
-    <th>Clock Out</th>
+<div class="container">
 
-</thead>
-    {% for datetime in clock_time%}
-
-    <tr>
-        <td>{{ datetime[1].strftime("%d, %m %Y") }}</td>
-        <td>{{ datetime[1].strftime("%H:%M:%S")}}</td>
-        {% if datetime[2] == None %}
-        <td></td>
-        <td></td>
-        {% else %}
-        <td>{{ datetime[2].strftime("%d, %m %Y") }}</td>
-        <td>{{ datetime[2].strftime("%H:%M:%S")}}</td>
-        {% endif %}
-        <td>{{ datetime[3] }}</td>
-        {% if datetime[2] == None %}
-        <td><button class="button is-small is-danger" hx-post="/clock_out/{{ datetime[0] }}" hx-target="body">Clock Out</button></td>
-        {% endif %}
-    </tr>
-    {% endfor %}
+    <table class="table">
+        <thead>
+            <!-- <th>Clockin Date</th> -->
+            <th>Clockin Time</th>
+            <!-- <th>Clockout Date</th> -->
+            <th>Clockout Time</th>
+            <th>Total</th>
+            <th>Clock Out</th>
     
-</table>
+        </thead>
+        <tbody >
+        {% for datetime in clock_time%}
+    
+        <tr>
+            <!-- <td>{{ datetime[1].strftime("%d, %m %Y") }}</td> -->
+            <td>{{ datetime[1].strftime("%H:%M:%S")}}</td>
+            {% if datetime[2] == None %}
+            <!-- <td></td> -->
+            <td></td>
+            {% else %}
+            <!-- <td>{{ datetime[2].strftime("%d, %m %Y") }}</td> -->
+            <td>{{ datetime[2].strftime("%H:%M:%S")}}</td>
+            {% endif %}
+            <td>{{ datetime[3] }}</td>
+            {% if datetime[2] == None %}
+            <td><button class="button is-small is-danger" hx-post="/clock_out/{{ datetime[0] }}" hx-target="body">Clock Out</button></td>
+            {% endif %}
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
