Functional, need to clean up interface

--- a/time_tracker/templates/clockin.html
+++ b/time_tracker/templates/clockin.html
@@ -2,9 +2,9 @@
 
     <table class="table">
         <thead>
-            <!-- <th>Clockin Date</th> -->
+            {# <!-- <th>Clockin Date</th> --> #}
             <th>Clockin Time</th>
-            <!-- <th>Clockout Date</th> -->
+            {# <!-- <th>Clockout Date</th> --> #}
             <th>Clockout Time</th>
             <th>Total</th>
             <th>Clock Out</th>
@@ -14,16 +14,22 @@
         {% for datetime in clock_time%}
     
         <tr>
-            <!-- <td>{{ datetime[1].strftime("%d, %m %Y") }}</td> -->
-            <td>{{ datetime[1].strftime("%H:%M:%S")}}</td>
+            <td>{{ datetime[1].strftime("%I:%M:%S")}}</td>
             {% if datetime[2] == None %}
-            <!-- <td></td> -->
             <td></td>
             {% else %}
-            <!-- <td>{{ datetime[2].strftime("%d, %m %Y") }}</td> -->
-            <td>{{ datetime[2].strftime("%H:%M:%S")}}</td>
+            <td>{{ datetime[2].strftime("%I:%M:%S")}}</td>
             {% endif %}
-            <td>{{ datetime[3] }}</td>
+            <td>
+            {% if datetime[3] != None %}
+                {% set h,m,s = datetime[3].split(",") %}
+                {% set hour = h|int %}
+                {% set minute = m|int %}
+                {% set second = s|int %}
+                
+                {{ hour }}h, {{ minute }}m, {{ second }}s
+            {% endif %}
+            </td>
             {% if datetime[2] == None %}
             <td><button class="button is-small is-danger" hx-post="/clock_out/{{ datetime[0] }}" hx-target="body">Clock Out</button></td>
             {% endif %}
