--- a/time_tracker/templates/index.html
+++ b/time_tracker/templates/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Tracker</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
+
     <div class="hero">
         <div class="container">
             <p class="title is-title">Time Tracker</p>
@@ -17,10 +11,10 @@
             </div>
         </div>
     </div>
+    
     <div id="clock" class="hero" hx-get="/clocks" hx-trigger="load">
         
         
     </div>
-</body>
-<script src="https://unpkg.com/htmx.org@1.7.0"></script>
-</html>
+
+{% endblock %}
