--- a/time_tracker/templates/reports.html
+++ b/time_tracker/templates/reports.html
@@ -27,23 +27,20 @@
                         {% endif %}
                         </td>
                         <td>
-                        
-                        {% if report.dt_out != None and report.clock_total != None %}
-                            {% set h,m,s = report.clock_total.split(",") %}
-                            {% set hour = h|int %}
-                            {% set minute = m|int %}
-                            {% set second = s|int %}
-                            
-                            {{ hour }}h, {{ minute }}m, {{ second }}s
-                        {% endif %}
+                            {% if report.dt_out != None and report.clock_total != None %}
+                                {% set h,m,s = report.clock_total.split(",") %}
+                                {% set hour = h|int %}
+                                {% set minute = m|int %}
+                                {% set second = s|int %}
+                                
+                                {{ hour }}h, {{ minute }}m, {{ second }}s
+                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-            <h2 class="subtotal" hx-trigger="load" hx-target="#totaltime" hx-swap="outerHTML">
-                {# {{ totals.h_total }}h, {{totals.m_total}}m, {{totals.s_total}}s #}
-            </h2>
+            <button class="button is-small is-info" hx-post="/reports/save/{{report_for_date[0].dt_in.strftime('%Y-%m-%d')}}" hx-target="body">Save Report</button>
         </div>
     </div>
 {% endblock %}
